--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Quiz</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    <script src="./assets/js/script.js"></script>
-</body>
+    
+    <title>Code Quiz</title>
+  </head>
+  <body>
+    <!-- Start header -->
+    <nav class="navbar navbar-expand-md fixed-top">
+      <div class="container-fluid">
+            <div id="highscore" class="nav-item nav-link"> View High Scores</div>
+            <h1 id="navbar-title">Timed Quiz Game</h1>
+            <table id=timers style="visibility: hidden;">
+              <tr>
+                <td> Time left in Game: </td>
+                <td> <span id="gameTimer" class="nav-item"></span> </td>
+              </tr>
+               <tr>
+                <td>Time left for Question:</td>
+                <td> <span id="quesTimer" class="nav-item"></span> </td>
+              </tr>
+            </table>
+        </div>
+      </div>
+    </nav>
+    <!-- end header -->
+    <!-- start Content -->
+    <div class="container-fluid">
+      <!-- need a place for the intro instructions and quiz -->
+      <section id="details"> </section>
+    </div>    
+  <!-- End Content -->
+
+  <!-- Start Footer -->
+    <nav class="navbar fixed-bottom footer">
+        <div class="footer-text">Website by Jose Zuniga</div>
+    </nav>
+  <!-- End Footer -->
+
+    <!-- read in file containing questions for quiz -->
+    <script src='./assets/js/script.js'></script>
+  </body>
 </html>
