--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-md fixed-top">
       <div class="container-fluid">
             <div id="highscore" class="nav-item nav-link"> View High Scores</div>
-            <h1 id="navbar-title">Timed Quiz Game</h1>
+            <h1 id="navbar-title">Code Quiz</h1>
             <table id=timers style="visibility: hidden;">
               <tr>
                 <td> Time left in Game: </td>
